--- a/styles/home.css
+++ b/styles/home.css
@@ -6,7 +6,7 @@ header {
   padding-left: 20px;
 }
 
-.hero {
+.hero_container {
   position: relative;
   background-color: var(--primary-2);
   overflow: hidden;
@@ -125,7 +125,7 @@ header {
   font-weight: 700;
 }
 
-.hero .text-wrapper {
+.hero_container .text-wrapper {
   padding: 0 20px 30px;
 }
 
@@ -171,11 +171,11 @@ header {
 }
 
 @media (min-width: 1100px) {
-  .hero-wrapper {
+  .container {
     background-color: var(--primary-2);
   }
 
-  .hero {
+  .hero_container {
     display: grid;
     height: 820px;
     grid-template-areas: "header mosaic"
@@ -217,7 +217,7 @@ header {
     font-size: 16px;
   }
 
-  .hero .text-wrapper {
+  .hero_container .text-wrapper {
     padding: 0 50px 0 100px;
     grid-area: texts;
     align-self: start;
